app/styles/main.scss
$icon-font-path: "/bower_components/sass-bootstrap/fonts/";

@import "config";
@import 'sass-bootstrap/lib/bootstrap';

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* Space out content a bit */
body {
  font-family: Novecentosanswide-Normal;
}

a {
    color: $color-base-font;
    &:hover {
      color: $color-base-font-hover;
      text-decoration:none;
    }
}

hr {
  display: block; height: 1px;
  border: 0; border-top: 1px solid $about-base-color;
}
.short-hr {
  width: 40px;
  position: relative;
  top: 10px;
}

.row {
  margin-top: 50px;
  margin-bottom: 50px;
}

.title {
  text-align: center;
  font-size: 3em;
}

/* Fonts */
.Novecentosanswide-Bold { 
  font-family: Novecentosanswide-Bold;
  font-weight: normal;
  font-style: normal;
}

.Novecentosanswide-Book { 
  font-family: Novecentosanswide-Book;
  font-weight: normal;
  font-style: normal;
}
/*
.Novecentosanswide-DemiBold { 
  font-family: Novecentosanswide-DemiBold;
  font-weight: normal;
  font-style: normal;
}
.Novecentosanswide-Light { 
  font-family: Novecentosanswide-Light;
  font-weight: normal;
  font-style: normal;
}
.Novecentosanswide-Medium { 
  font-family: Novecentosanswide-Medium;
  font-weight: normal;
  font-style: normal;
}*/
.Novecentosanswide-Normal { 
  font-family: Novecentosanswide-Normal;
  font-weight: normal;
  font-style: normal;
}

.blue {
  color: #00cfc9;
}

/* Divider */
.arrow-down {
  width: 0; 
  height: 0; 
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #fff;
}

.arrow-down-big {
  width: 0; 
  height: 0; 
  border-left: 14px solid transparent;
  border-right: 14px solid transparent;
  border-top: 16px solid #fff;
}

.divider {
  text-align:center;
  display: block;
  width:100%;
  .divider-img {
    margin: auto;
  }
  hr {
    margin-top: 2px;
    margin-bottom: -1px;
    display: block; height: 1px;
    border: 0; border-top: 1px solid $about-base-color;      
    width: 80px; 
  }
  .arrow-down {
    border-top-color: $about-base-color;
    margin: auto;
  }
}

.logo-small-white-img {
  @include image-div('logo-small-white');
}

.logo-small-grey-img {
  @include image-div('logo-small-grey');
}

.logo-small-blue-img {
  @include image-div('logo-small-blue');
}

.logo-small-baige-img{
  @include image-div('logo-small-baige');
}

.social-list{
  width: 84px;
  margin: auto;
} 
.social {
  margin: 0 10px;
  float: left;
}
.social-facebook-img{
  @include image-div('social-facebook');
}
.social-twitter-img{
  @include image-div('social-twitter');
}
.social-instagram-img{
  @include image-div('social-instagram');
}

.opacity-hover {
    @include opacity(0.8);
}

.opacity-hover-revert {
    @include opacity(1);
}

#canvasLoader {
  margin: auto;
  width: 200px;
  margin-top: 50px;
}

/* Menu */
#menu {
  z-index:2;
  position: fixed;
  top: 0px;
  left: -195px;
  height: 100%;
  width: 200px;
  background-color: $color-menu-background;
  @include opacity(0.9);
  
  a#menu-button {
    position: fixed;
    top: 45%;
    left: 5px;
    height: 50px;
    width: 40px;
    background-color: $color-menu-background;
    font-size: 2.5em;
    @media screen and (max-width: $menu-break) {
      top: 0;
    }
  }
  
  .box-shadow-menu {
    position: relative;
    padding-left: 1.25em;
    &:before {
      content: "";
      position: absolute;
      top: 10px;
      left: 0;
      border-bottom: 18px double $color-base-font;
      border-top: 6px solid $color-base-font;
      height: 30px;
      width: 36px;
    }
    &:hover:before {
      border-color: $color-base-font-hover;      
    }
  }  

  a#index-logo {
    display:block;
    position: relative;
    top: 29%;    
    left: 75px;   
    @media screen and (max-width: $menu-break) {
      top: 19%;
    }   
    @media screen and (max-width: $mobile-break) {
      top: 10%;
    } 
  }
  
  ol {
    position: relative;
    top: 30%;
    color: #ffffff;
    counter-reset: item;
    list-style-type: none;
    @media screen and (max-width: $menu-break) {
      top: 20%;
    }
    @media screen and (max-width: $mobile-break) {
      top: 10%;
    }
    
    li {
      margin-top: 1.3em;
      &:before { 
        content: counter(item) "  "; 
        counter-increment: item;
        font-size: 0.8em;
      }
    }
    
    a {
      position: relative;
      top: 1em;
      left: -10px;      
      font-family: Novecentosanswide-Bold;
      font-size: 1.3em;  
    }
    .selected {
      color: $color-base-font-hover;
      &:hover {
        color: $color-base-font-hover;
      }
    }
  }
  .social-list {
    position: absolute;
    bottom: 50px;
    left: 50px; 
    @media screen and (max-height: $main-page-height-break) {
      bottom: 20px;
    }
  }
}

/* Footer */
footer {
  position:relative;
  @media screen and (max-width: $footer-break) {
    text-align:center;
  }
  .row {
    margin-top: 40px;
    margin-botom: 40px;
  }
  background-color: #000000;
  ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
    li {
     display: inline-block;
     a {
      text-decoration: none;
      padding: 1em 1em;
      display: block;
      color: #ffffff;
    }
    .selected {
      color: $color-base-font;
      &:hover {
        color: $color-base-font-hover;
      }
    }
   }
  }
  #tribecoders {
    padding: 1em 1em;
    @media screen and (min-width: $footer-break) {
      text-align:right;
    }
    span {
      color: #ffffff;
    }
  }
}

